swag init 및 초기 환경 구성용 Test 추가
